After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649452 - "Turn on accessibility features from the keyboard" checkbox should disappear
"Turn on accessibility features from the keyboard" checkbox should disappear
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Universal Access
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-05-05 11:58 UTC by Vincent Untz
Modified: 2011-09-08 23:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Typing tab screenshot (62.30 KB, image/png)
2011-05-05 11:58 UTC, Vincent Untz
Details

Description Vincent Untz 2011-05-05 11:58:50 UTC
Created attachment 187277 [details]
Typing tab screenshot

I'm not sure why we have a "Turn on accessibility features from the keyboard" checkbox. It's kind of painful to check it, and then enable via the GtkSwitch the accessibility feature: it's an unneeded step.

Surely, we can drop it and if automatically do what it was linked to when any of the three switches below is set to On?

See screenshot.
Comment 1 Bastien Nocera 2011-05-05 12:15:42 UTC
I think the sensitivity of that box is wrong actually.

"Turn on accessibility features from the keyboard" means that we would allow turning "Slow keys" on/off from the keyboard. We should be able to always have slow keys on by unchecking the checkbox, and turning on the feature through the GtkSwitch.
Comment 2 Matthias Clasen 2011-05-06 10:56:46 UTC
Ha! I always thought that checkbox was somehow wierd. That explains it...
Comment 3 Matthias Clasen 2011-09-01 22:35:44 UTC
We should clean this up for 3.2, at least...
Comment 4 Bastien Nocera 2011-09-08 23:11:27 UTC
commit ebd4414ac9d5a32d67bbcd209589934141da385c
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Sep 9 00:07:10 2011 +0100

    universal-access: Fix sensitivity of keyboard a11y
    
    Whether or not we have things like Sticky Keys, or Slow Keys
    enabled, we still need to be able to turn them on/off from
    the keyboard.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=649452