universal-access: Fix sensitivity of keyboard a11y

Whether or not we have things like Sticky Keys, or Slow Keys
enabled, we still need to be able to turn them on/off from
the keyboard.

https://bugzilla.gnome.org/show_bug.cgi?id=649452